--- a/stage_1/task_4/index.html
+++ b/stage_1/task_4/index.html
@@ -61,6 +61,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
+            z-index: -1;
         }
         #method-1:checked ~ .container .main{
             height: 100%;
