--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -21,6 +21,191 @@
     </style>
 </head>
 <body>
-
+<header>
+    <h1>新世界</h1>
+    <nav>
+        <ul>
+            <li>首页</li>
+            <li>最新活动</li>
+            <li>项目介绍</li>
+            <li>爱心社区</li>
+            <li>关于我们</li>
+            <li>登录</li>
+        </ul>
+    </nav>
+</header>
+<article>
+    <section id="section-1">
+        <h2>Time of new life</h2>
+        <p>
+            新时代，年轻的人们让我们一起<br/>
+            体验新生活，享受新生活
+        </p>
+        <input type="button" value="开始体验"/>
+    </section>
+    <section id="section-2">
+        <table>
+            <thead>
+            <tr>
+                <th class="donut"></th>
+                <th class="flag"></th>
+                <th class="flower"></th>
+                <th class="window"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>打造全新世界观，让你更爱你的生活</td>
+                <td>丰富多彩的公益活动，发挥新世界的主人公意识</td>
+                <td>时尚的新理念，超前体验未知的生活</td>
+                <td>完善的培养机制，培养你全新的世界观</td>
+            </tr>
+            </tbody>
+        </table>
+    </section>
+    <section id="section-3">
+        <h2>关于新世界，你不知道的还有什么？</h2>
+    </section>
+    <section id="section-4">
+        <h3>查找新世界城市活动信息</h3>
+        <hr/>
+        <p>每个城市都<!--Typo: "的"->"都"-->有不同的活动信息，请自主查询您所要了解的城市</p>
+        <form action="" method="get">
+            <label>
+                <select name="region" id="region">
+                    <option value="China" selected="selected">中国</option>
+                </select>
+            </label>
+            <label>
+                <select name="state" id="state">
+                    <option value="" disabled="disabled" selected="selected">省份</option>
+                    <option value="Beijing">北京市</option>
+                    <option value="Tianjin">天津市</option>
+                    <option value="Hebei">河北省</option>
+                    <option value="Shaanxi">陕西省</option>
+                    <option value="InnerMongolia">内蒙古自治区</option>
+                    <option value="Liaoning">辽宁省</option>
+                </select>
+            </label>
+            <label>
+                <select name="city" id="city">
+                    <option value="" disabled="disabled" selected="selected">城市</option>
+                </select>
+            </label>
+            <input type="submit" value="搜索"/>
+        </form>
+    </section>
+    <section id="section-5">
+        <figure id="item-1">
+            <div class="image"></div>
+            <figcaption>
+                <h3>北京活动</h3>
+                新社区大联盟
+            </figcaption>
+        </figure>
+        <figure id="item-2">
+            <div class="image"></div>
+            <figcaption>
+                <h3>上海活动</h3>
+                夜上海新景观探索
+            </figcaption>
+        </figure>
+        <figure id="item-3">
+            <div class="image"></div>
+            <figcaption>
+                <h3>深圳活动</h3>
+                全新海岸线观点站
+            </figcaption>
+        </figure>
+        <figure id="item-4">
+            <div class="image"></div>
+            <figcaption>
+                <h3>香港活动</h3>
+                奢侈消费大派送
+            </figcaption>
+        </figure>
+    </section>
+    <section id="section-6">
+        <div class="left">
+            <abbr title="新世界">TIME</abbr>
+            <address>
+                @新世界 - 北京<br/>
+                <time>2016.04.01</time>
+            </address>
+        </div>
+        <div class="right">
+            <div class="slider" id="slider-page-1">
+                <h3>新世界<var>01</var></h3>
+                <p>新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界</p>
+                <input type="button" value="更多详情"/>
+            </div>
+            <div class="slider" id="slider-page-2">
+                <h3>新世界<var>02</var></h3>
+                <p>新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界</p>
+                <input type="button" value="更多详情"/>
+            </div>
+            <div class="slider" id="slider-page-3">
+                <h3>新世界<var>03</var></h3>
+                <p>新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界</p>
+                <input type="button" value="更多详情"/>
+            </div>
+            <input type="radio" name="slider-nav" id="slider-nav-1"/>
+            <input type="radio" name="slider-nav" id="slider-nav-2"/>
+            <input type="radio" name="slider-nav" id="slider-nav-3"/>
+        </div>
+    </section>
+    <section id="section-7">
+        <div class="left">
+            <h3>
+                新时代<br/>
+                关于爱生活的我们
+            </h3>
+            <hr/>
+            <input type="button" value="查看更多"/>
+        </div>
+        <div class="middle">
+            <h3>
+                新时代<br/>
+                关于爱生活的我们
+            </h3>
+            <hr/>
+            <input type="button" value="查看更多"/>
+        </div>
+        <div class="right"></div>
+    </section>
+    <section id="section-8">
+        <h3>成为我们的志愿者</h3>
+        <hr/>
+        <p>
+            新世界的大家庭需要每一个爱生活的人加入，如果你够年轻，有梦想，有激情<br/>
+            那就不要犹豫，快来加入我们，成为改变所有人生活的人
+        </p>
+        <form action="" method="post">
+            <div id="form-eula">
+                <div class="eula">
+                    <h4>新世界志愿者协议</h4>
+                    <p>加入新世界志愿者的人员必须遵守中华人民共<!--Typo: "共"->""-->和国的相关法律法规，并且本着平等自愿的原则 ……</p>
+                    <label for="more-1"></label>
+                    <input type="checkbox" name="more" id="more-1"/>
+                </div>
+                <div class="eula">
+                    <h4>新世界志愿者权利</h4>
+                    <p>新世界志愿者享受新世界内部所有资源共享的权利，并且享受所在市<!--Typo: "四"->"市"-->新世界活动的优先参与资格</p>
+                    <label for="more-2"></label>
+                    <input type="checkbox" name="more" id="more-2"/>
+                </div>
+                <div class="eula">
+                    <h4>更多条款</h4>
+                    <label for="more-3"></label>
+                    <input type="checkbox" name="more" id="more-3"/>
+                </div>
+            </div>
+        </form>
+    </section>
+</article>
+<footer>
+    <address>@2016新世界</address>
+    <a href="">Back to top</a>
+</footer>
 </body>
 </html>
