--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -180,6 +180,8 @@
             新世界的大家庭需要每一个爱生活的人加入，如果你够年轻，有梦想，有激情<br/>
             那就不要犹豫，快来加入我们，成为改变所有人生活的人
         </p>
+    </section>
+    <section id="section-9">
         <form action="" method="post">
             <div id="form-eula">
                 <div class="eula">
@@ -201,6 +203,21 @@
                 </div>
             </div>
         </form>
+    </section>
+    <section id="section-10">
+        <h3>联系我们</h3>
+        <p>
+            为了更好的获取我们最新的产品资讯，您可以留下您的电子邮箱快速订阅我们的产品资讯<br/>
+            也可以通过以下任何方式关注我们动态
+        </p>
+        <form action="" method="post">
+            <input type="text" name="email" id="email" placeholder="someone@email.com"/>
+            <input type="submit" value="提交"/>
+        </form>
+        <a href="" class="icon-qq"></a>
+        <a href="" class="icon-weibo"></a>
+        <a href="" class="icon-twitter"></a>
+        <a href="" class="icon-world"></a>
     </section>
 </article>
 <footer>
