--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -374,8 +374,10 @@
             display: none;
         }
 
+        /* Select功能区完毕 */
+
         /* 显示向下箭头 */
-        .select .appearance::after {
+        #section-4 .select .appearance::after {
             content: '';
             background: #be4e48 url('images/sprite.png') -67px -203px no-repeat;
             background-blend-mode: normal;
@@ -388,7 +390,7 @@
         }
 
         /* Select外观 */
-        .select .appearance{
+        #section-4 .select .appearance{
             display: block;
             width: 235px;
             height: 35px;
@@ -397,22 +399,22 @@
         }
 
         /* 选中时红色外框 */
-        .select .appearance-switch:focus ~ .appearance{
+        #section-4 .select .appearance-switch:focus ~ .appearance{
             border: 1px #be4e48 solid;
         }
 
         /* 下拉框外观 */
-        .select .appearance-switch:focus ~ .drop-down{
+        #section-4 .select .appearance-switch:focus ~ .drop-down{
             border: 1px #be4e48 solid;
         }
 
         /* 下拉框背景色 */
-        .select .appearance-switch:focus ~ .drop-down [type=radio]:checked + label{
+        #section-4 .select .appearance-switch:focus ~ .drop-down [type=radio]:checked + label{
             background-color: #a4a4a5;
         }
 
         /* 单个选项外观 */
-        .select .drop-down label {
+        #section-4 .select .drop-down label {
             height: 25px; /* Sync with margin-top */
             background: #e3e3e4;
             color: initial;
@@ -421,16 +423,65 @@
             line-height: 25px;
         }
 
-        #region .appearance::before{
+        #section-4 #region .appearance::before{
             content: '国家';
         }
 
-        #state .appearance::before{
+        #section-4 #state .appearance::before{
             content: '省份';
         }
 
-        #city .appearance::before{
+        #section-4 #city .appearance::before{
             content: '城市';
+        }
+
+        #section-5 {
+            height: 605px;
+            background: #f7f7f7;
+            overflow: hidden;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+            color: #786f6c;
+            line-height: 1;
+        }
+
+        #section-5 figure{
+            width: 220px;
+            height: 390px;
+            display: inline-block;
+            margin: 0 18px;
+        }
+
+        #section-5 figcaption h3{
+            font-size: 15px;
+            font-weight: lighter;
+            color: #323333;
+            margin: 12px;
+        }
+
+        #section-5 .image{
+            background: #fff center no-repeat;
+            height: 340px;
+            border: 1px #cdc9c8 solid;
+        }
+
+        #section-5 #item-1 .image{
+            background-image: url('images/s5_item1.png');
+        }
+
+        #section-5 #item-2 .image{
+            background-image: url('images/s5_item2.png');
+        }
+
+        #section-5 #item-3 .image{
+            background-image: url('images/s5_item3.png');
+        }
+
+        #section-5 #item-4 .image{
+            background-image: url('images/s5_item4.png');
         }
     </style>
 </head>
