add unfinished task_7

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 <p>Task_4 <strong>定位和居中问题</strong>: <a href="stage_1/task_4/index.html">Link</a></p>
 
 <p>Task_5 <strong>零基础HTML及CSS编码（二）</strong>: <a href="stage_1/task_5/index.html">Link</a></p>
+
+<p>Task_7 <strong>实现常见的技术产品官网的页面架构及样式布局</strong><em> -暂未完成- </em>: <a href="stage_1/task_7/index.html">Link</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/wdhwg001">wdhwg001</a></p>
