--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -258,7 +258,7 @@
         #section-4 form .select{
             display: inline-block;
             margin: 0 14px;
-            color: #323333;
+            color: rgba(50, 51, 51, 0.7);
         }
 
         #section-4 form [type=submit] {
@@ -335,6 +335,7 @@
             visibility: visible;
             opacity: 1;
             color: inherit;
+            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
         }
 
         .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:not(:checked) + label{
