--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -335,7 +335,6 @@
             visibility: visible;
             opacity: 1;
             color: inherit;
-            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
         }
 
         .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:not(:checked) + label{
@@ -433,6 +432,14 @@
             text-align: left;
             width: 235px;
             line-height: 25px;
+        }
+
+        #section-4 .select .appearance-switch:focus ~ .drop-down label{
+            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
+        }
+
+        #section-4 .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:checked + label{
+            color: rgba(50, 51, 51, 0.9);
         }
 
         #section-4 #region .appearance::before{
