--- a/stage_2/task_14/index.html
+++ b/stage_2/task_14/index.html
@@ -42,6 +42,10 @@
             li += '<li>第' + zhNum[i+1] + '名：' + highAqiCities[i][0] + '，' + highAqiCities[i][1] + '</li>';
         }
         document.getElementById('aqi-list').innerHTML = li;
+        /*
+        * Test Cases:
+        * default -> '<li>第一名：西安，100</li><li>第二名：北京，90</li><li>第三名：成都，90</li>'
+        * */
     })();
 
 </script>
