--- a/stage_2/task_13/index.html
+++ b/stage_2/task_13/index.html
@@ -22,7 +22,7 @@
          */
         document.getElementById('button').onclick = function(){
             var num;
-            document.getElementById('aqi-display').innerHTML = isNaN(num = Number(document.getElementById('aqi-input').value || '~')) ? '请填写数值' : num;
+            document.getElementById('aqi-display').innerHTML = isNaN(num = Number(document.getElementById('aqi-input').value || '~')) ? '请输入数值' : num;
         };
         /*
         * Test Cases:
