--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -235,6 +235,13 @@
             font-size: 12px;
             line-height: 1;
             color: #fff;
+            position: relative;
+            z-index: 1;
+        }
+
+        #section-4 > *{
+            position: relative;
+            z-index: 3;
         }
 
         #section-4 h3{
@@ -337,6 +344,7 @@
             color: inherit;
         }
 
+        /* 收起瞬间隐藏所有文字 */
         .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:not(:checked) + label{
             color: transparent !important;
         }
@@ -454,16 +462,16 @@
             content: '城市';
         }
 
-        #section-1:after{
+        #section-4:after{
             content: '';
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: #000;
-            opacity: 0.26;
+            background-color: #aa3433;
+            opacity: 0.20;
             top: 0;
             display: block;
-            z-index: -1;
+            z-index: 2;
         }
 
         #section-5 {
@@ -513,6 +521,10 @@
 
         #section-5 #item-4 .image{
             background-image: url('images/s5_item4.png');
+        }
+
+        @keyframes section-5-hover {
+            /**/
         }
     </style>
 </head>
