--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -235,6 +235,13 @@
             font-size: 12px;
             line-height: 1;
             color: #fff;
+            position: relative;
+            z-index: 1;
+        }
+
+        #section-4 > *{
+            position: relative;
+            z-index: 3;
         }
 
         #section-4 h3{
@@ -258,7 +265,7 @@
         #section-4 form .select{
             display: inline-block;
             margin: 0 14px;
-            color: #323333;
+            color: rgba(50, 51, 51, 0.7);
         }
 
         #section-4 form [type=submit] {
@@ -337,6 +344,7 @@
             color: inherit;
         }
 
+        /* 收起瞬间隐藏所有文字 */
         .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:not(:checked) + label{
             color: transparent !important;
         }
@@ -434,6 +442,14 @@
             line-height: 25px;
         }
 
+        #section-4 .select .appearance-switch:focus ~ .drop-down label{
+            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
+        }
+
+        #section-4 .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:checked + label{
+            color: rgba(50, 51, 51, 0.9);
+        }
+
         #section-4 #region .appearance::before{
             content: '国家';
         }
@@ -446,16 +462,16 @@
             content: '城市';
         }
 
-        #section-1:after{
+        #section-4:after{
             content: '';
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: #000;
-            opacity: 0.26;
+            background-color: #aa3433;
+            opacity: 0.20;
             top: 0;
             display: block;
-            z-index: -1;
+            z-index: 2;
         }
 
         #section-5 {
@@ -478,17 +494,24 @@
             margin: 0 18px;
         }
 
+        #section-5 figcaption{
+            transition: opacity 1s, transform 0s;
+        }
+
         #section-5 figcaption h3{
             font-size: 15px;
             font-weight: lighter;
             color: #323333;
             margin: 12px;
+            white-space: nowrap;
+            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
         }
 
         #section-5 .image{
             background: #fff center no-repeat;
             height: 340px;
             border: 1px #cdc9c8 solid;
+            transition: transform 1s;
         }
 
         #section-5 #item-1 .image{
@@ -505,6 +528,144 @@
 
         #section-5 #item-4 .image{
             background-image: url('images/s5_item4.png');
+        }
+
+        @keyframes section-5-hover-image {
+            from{
+                transform: translate3d(0, 0, 0);
+            }
+            75%{
+                transform: translate3d(0, 15%, 0);
+            }
+            to{
+                transform: translate3d(0, 15%, 0);
+            }
+        }
+
+        @keyframes section-5-hover-text {
+            0%{
+                opacity: 1;
+                transform: translate3d(0, 0, 0);
+            }
+            30%{
+                opacity: 0;
+                transform: translate3d(0, 0, 0);
+            }
+            40%{
+                opacity: 0;
+                transform: translate3d(0, -350px, 0);
+            }
+            100%{
+                opacity: 1;
+                transform: translate3d(0, -350px, 0);
+            }
+        }
+        
+        @keyframes section-5-hover-title {
+            0%{
+                margin: 12px;
+                font-size: 15px;
+                text-indent: 0;
+                letter-spacing: 0;
+            }
+            30%{
+                margin: 12px;
+                font-size: 15px;
+                text-indent: 0;
+                letter-spacing: 0;
+            }
+            35%{
+                margin: 8px;
+                font-size: 21px;
+                text-indent: 0;
+                letter-spacing: 0;
+            }
+            75%{
+                margin: 8px;
+                font-size: 21px;
+                letter-spacing: 30px;
+                text-indent: 15px;
+            }
+            100%{
+                margin: 8px;
+                font-size: 21px;
+                letter-spacing: 30px;
+                text-indent: 15px;
+            }
+        }
+
+        #section-5 figure:hover .image{
+            animation: section-5-hover-image 1.5s ease;
+            transform: translate3d(0, 15%, 0);
+        }
+
+        #section-5 figure:hover figcaption{
+            animation: section-5-hover-text 1.5s ease;
+            opacity: 1;
+            transform: translate3d(0, -350px, 0);
+        }
+
+        #section-5 figure:hover h3{
+            animation: section-5-hover-title 1.5s ease;
+            margin: 8px;
+            font-size: 21px;
+            letter-spacing: 30px;
+            text-indent: 15px;
+        }
+
+        #section-6 {
+            height: 565px;
+            white-space: nowrap;
+        }
+
+        #section-6 [type=radio]{
+            display: none;
+        }
+
+        #section-6 > div{
+            display: inline-block;
+            white-space: normal;
+            height: 100%;
+            vertical-align: top;
+        }
+
+        #section-6 .left{
+            width: 67%;
+            background: #ededec url('images/s6_bg.png') center no-repeat;
+            color: #fff;
+        }
+
+        #section-6 .right{
+            width: 33%;
+            white-space: nowrap;
+        }
+
+        #section-6 .left abbr{
+            display: block;
+            text-align: center;
+            margin: 128px auto 11px;
+            font-size: 158px;
+            line-height: 1;
+        }
+
+        #section-6 .left abbr:before{
+            content: attr(title);
+            display: block;
+            font-size: 49px;
+            margin-bottom: -10px;
+        }
+
+        #section-6 .left address{
+            font-size: 22px;
+            font-style: normal;
+            line-height: 2;
+            text-align: center;
+        }
+
+        #section-6 .right .slider{
+            display: inline-block;
+            width: 100%;
+            white-space: normal;
         }
     </style>
 </head>
@@ -630,6 +791,9 @@
         </figure>
     </section>
     <section id="section-6">
+        <input type="radio" name="slider-nav" id="slider-nav-1"/>
+        <input type="radio" name="slider-nav" id="slider-nav-2"/>
+        <input type="radio" name="slider-nav" id="slider-nav-3"/>
         <div class="left">
             <abbr title="新世界">TIME</abbr>
             <address>
@@ -653,9 +817,9 @@
                 <p>新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界</p>
                 <input type="button" value="更多详情"/>
             </div>
-            <input type="radio" name="slider-nav" id="slider-nav-1"/>
-            <input type="radio" name="slider-nav" id="slider-nav-2"/>
-            <input type="radio" name="slider-nav" id="slider-nav-3"/>
+            <label for="slider-nav-1"></label>
+            <label for="slider-nav-2"></label>
+            <label for="slider-nav-3"></label>
         </div>
     </section>
     <section id="section-7">
