optimize animation in section-5

--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -562,26 +562,26 @@
             0%{
                 margin: 12px;
                 font-size: 15px;
-                text-indent: 0;
+                transform: translate3d(0, 0, 0);
                 letter-spacing: 0;
             }
             16.7%{
                 margin: 12px;
                 font-size: 15px;
-                text-indent: 0;
+                transform: translate3d(0, 0, 0);
                 letter-spacing: 0;
             }
             33%{
                 margin: 8px;
                 font-size: 21px;
-                text-indent: 0;
+                transform: translate3d(0, 0, 0);
                 letter-spacing: 0;
             }
             100%{
                 margin: 8px;
                 font-size: 21px;
+                transform: translate3d(14px, 0, 0);
                 letter-spacing: 30px;
-                text-indent: 15px;
             }
         }
 
@@ -601,7 +601,7 @@
             margin: 8px;
             font-size: 21px;
             letter-spacing: 30px;
-            text-indent: 15px;
+            transform: translate3d(14px, 0, 0);
         }
 
         #section-6 {
