--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -197,7 +197,7 @@
             border-right: 1.5px #999695 solid;
             /* OCD Detailing */
             -webkit-font-smoothing: subpixel-antialiased;
-            text-shadow: 0 0 .0001px rgba(118, 119, 119, 0.5);
+            text-shadow: 0 0 1px rgba(118, 119, 119, 0.3);
         }
 
         #section-2 td:last-of-type{
@@ -265,7 +265,7 @@
         #section-4 form .select{
             display: inline-block;
             margin: 0 14px;
-            color: rgba(50, 51, 51, 0.7);
+            color: rgba(50, 51, 51, 0.8);
         }
 
         #section-4 form [type=submit] {
@@ -443,7 +443,7 @@
         }
 
         #section-4 .select .appearance-switch:focus ~ .drop-down label{
-            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
+            text-shadow: 0 0 1px rgba(50, 51, 51, 0.2);
         }
 
         #section-4 .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:checked + label{
@@ -504,7 +504,7 @@
             color: #323333;
             margin: 12px;
             white-space: nowrap;
-            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
+            text-shadow: 0 0 1px rgba(50, 51, 51, 0.3);
         }
 
         #section-5 .image{
