fix section-3 for ie11

--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -208,6 +208,7 @@
             height: 360px;
             background: #ededec;
             display: flex;
+            align-items: center;
         }
 
         #section-3 h2{
