--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -197,7 +197,7 @@
             border-right: 1.5px #999695 solid;
             /* OCD Detailing */
             -webkit-font-smoothing: subpixel-antialiased;
-            text-shadow: 0 0 .0001px rgba(118, 119, 119, 0.5);
+            text-shadow: 0 0 1px rgba(118, 119, 119, 0.3);
         }
 
         #section-2 td:last-of-type{
@@ -208,6 +208,7 @@
             height: 360px;
             background: #ededec;
             display: flex;
+            align-items: center;
         }
 
         #section-3 h2{
@@ -265,7 +266,7 @@
         #section-4 form .select{
             display: inline-block;
             margin: 0 14px;
-            color: rgba(50, 51, 51, 0.7);
+            color: rgba(50, 51, 51, 0.8);
         }
 
         #section-4 form [type=submit] {
@@ -443,7 +444,7 @@
         }
 
         #section-4 .select .appearance-switch:focus ~ .drop-down label{
-            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
+            text-shadow: 0 0 1px rgba(50, 51, 51, 0.2);
         }
 
         #section-4 .select .appearance-switch:not(:focus) ~ .drop-down [type=radio]:checked + label{
@@ -495,7 +496,7 @@
         }
 
         #section-5 figcaption{
-            transition: opacity 1s, transform 0s;
+            transition: opacity 0.5s, transform 0s;
         }
 
         #section-5 figcaption h3{
@@ -504,14 +505,14 @@
             color: #323333;
             margin: 12px;
             white-space: nowrap;
-            text-shadow: 0 0 .0001px rgba(50, 51, 51, 0.5);
+            text-shadow: 0 0 1px rgba(50, 51, 51, 0.3);
         }
 
         #section-5 .image{
             background: #fff center no-repeat;
             height: 340px;
             border: 1px #cdc9c8 solid;
-            transition: transform 1s;
+            transition: transform 0.5s;
         }
 
         #section-5 #item-1 .image{
@@ -534,9 +535,6 @@
             from{
                 transform: translate3d(0, 0, 0);
             }
-            75%{
-                transform: translate3d(0, 15%, 0);
-            }
             to{
                 transform: translate3d(0, 15%, 0);
             }
@@ -547,11 +545,11 @@
                 opacity: 1;
                 transform: translate3d(0, 0, 0);
             }
-            30%{
+            16.7%{
                 opacity: 0;
                 transform: translate3d(0, 0, 0);
             }
-            40%{
+            33%{
                 opacity: 0;
                 transform: translate3d(0, -350px, 0);
             }
@@ -565,52 +563,46 @@
             0%{
                 margin: 12px;
                 font-size: 15px;
-                text-indent: 0;
+                transform: translate3d(0, 0, 0);
                 letter-spacing: 0;
             }
-            30%{
+            16.7%{
                 margin: 12px;
                 font-size: 15px;
-                text-indent: 0;
+                transform: translate3d(0, 0, 0);
                 letter-spacing: 0;
             }
-            35%{
+            33%{
                 margin: 8px;
                 font-size: 21px;
-                text-indent: 0;
+                transform: translate3d(0, 0, 0);
                 letter-spacing: 0;
-            }
-            75%{
-                margin: 8px;
-                font-size: 21px;
-                letter-spacing: 30px;
-                text-indent: 15px;
             }
             100%{
                 margin: 8px;
                 font-size: 21px;
+                transform: translate3d(14px, 0, 0);
                 letter-spacing: 30px;
-                text-indent: 15px;
             }
         }
 
         #section-5 figure:hover .image{
-            animation: section-5-hover-image 1.5s ease;
+            animation: section-5-hover-image 0.6s ease;
             transform: translate3d(0, 15%, 0);
         }
 
         #section-5 figure:hover figcaption{
-            animation: section-5-hover-text 1.5s ease;
+            animation: section-5-hover-text 0.7s ease;
             opacity: 1;
             transform: translate3d(0, -350px, 0);
         }
 
         #section-5 figure:hover h3{
-            animation: section-5-hover-title 1.5s ease;
+            animation: section-5-hover-title 0.7s ease;
             margin: 8px;
             font-size: 21px;
             letter-spacing: 30px;
-            text-indent: 15px;
+            transform: translate3d(14px, 0, 0);
         }
 
         #section-6 {
