optimize font anti-aliasing

--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -38,9 +38,10 @@
             font-size: 21px;
             display: inline-block;
             margin: 13px 60px;
+            color: #393a3a;
             /* OCD Detailing */
             -webkit-font-smoothing: subpixel-antialiased;
-            -webkit-text-stroke: .3px #000;
+            text-shadow: 0 0 1px rgba(57, 58, 58, 0.2);
             font-weight: lighter;
         }
 
